chore: 파이어베이스 프로젝트 연결

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ xcuserdata/
 *.pid
 
 .cursorrules
+
+# Firebase 설정 파일
+google-services.json
+GoogleService-Info.plist
+firepit-log.txt
+lib/firebase_options.dart
