--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   table_calendar: ^3.2.0
   go_router: ^14.6.3
+  firebase_crashlytics: ^4.3.1
+  firebase_analytics: ^11.4.1
 
 dev_dependencies:
   flutter_test:
