--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   go_router: ^14.6.3
   firebase_crashlytics: ^4.3.1
   firebase_analytics: ^11.4.1
+  firebase_core: ^3.10.1
+  cloud_firestore: ^5.6.2
 
 dev_dependencies:
   flutter_test:
