--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.6.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,12 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  table_calendar: ^3.2.0
-  go_router: ^14.6.3
-  firebase_crashlytics: ^4.3.1
-  firebase_analytics: ^11.4.1
+  flutter_bloc: ^9.0.0
   firebase_core: ^3.10.1
   cloud_firestore: ^5.6.2
+  get_it: ^8.0.3
+  dartz: ^0.10.1
+  equatable: ^2.0.7
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
