--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.7
   google_fonts: ^6.2.1
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
