--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   equatable: ^2.0.7
   google_fonts: ^6.2.1
   table_calendar: ^3.2.0
+  firebase_auth: ^5.4.1
+  intl_phone_number_input: ^0.7.4
+  flutter_libphonenumber: ^2.5.0
+  mockito: ^5.4.5
 
 dev_dependencies:
   flutter_test:
