feat: 안드로이드 관련 버전 업데이트, 영상 위치 수정

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,6 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
-    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
 
 dependencies {
@@ -42,7 +41,7 @@ android {
         applicationId = "com.thequeenfit.cfq"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
