--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.3.1"
+    "firebase-functions": "^6.3.1",
+    "openai": "^4.82.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
