--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,20 +35,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.0.0
-  firebase_core: ^3.10.1
-  cloud_firestore: ^5.6.2
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.17.4
+  cloud_firestore: ^4.15.4
   get_it: ^8.0.3
   dartz: ^0.10.1
   equatable: ^2.0.7
   google_fonts: ^6.2.1
   table_calendar: ^3.2.0
-  firebase_auth: ^5.4.1
   intl_phone_number_input: ^0.7.4
   flutter_libphonenumber: ^2.5.0
   mockito: ^5.4.5
   lottie: ^3.3.1
   video_player: ^2.9.2
   csv: ^6.0.0
+  cloud_functions: ^4.7.6
 
 dev_dependencies:
   flutter_test:
