--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   video_player: ^2.9.2
   csv: ^6.0.0
   cloud_functions: ^4.7.6
+  flutter_carousel_widget: ^3.1.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +78,8 @@ flutter:
   assets:
     - assets/
     - assets/animations/
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
